# italian-vocabulary-builder

./: .credentials.template  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  app.py  coniugazione.html  pyproject.toml  requirements.txt  run_code_check.sh  tre.txt
.github/: dependabot.yml
.github/workflows/: black.yml  pylint.yml
templates/: index.html  search_results.html
vocab_builder/: api_client.py  api_result.py  app_config.py  translation_config.py
vocab_builder/coniugazione/: coniugazione_client.py  coniugazione_result.py
vocab_builder/pons/: pons_api_client.py  pons_result.py
vocab_builder/reverso/: reverso_api_client.py  reverso_result.py
vocab_builder/treccani/: treccani_client.py  treccani_html_parser_utils.py  treccani_result.py
